2009-10-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Don't save control file when aria2 exists while checking piece
	hash(behavior of -V option). If control file doesn't exist when
	aria2 launched, the completed length in saved control file will be
	0 byte and this confuses user. disableSaveControlFile() is called
	in RequestGroup::processCheckIntegrityEntry().
	enableSaveControlFile() will be called after hash checking is
	done. See CheckIntegrityCommand.
	* src/CheckIntegrityCommand.cc
	* src/RequestGroup.cc
	* src/RequestGroup.h
	* src/RequestGroupMan.cc

2009-10-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Included version number in Peer ID and client version.  Peer ID
	now starts with "aria2/VERSION-", where VERSION is
	MAJOR.MINOR.MICRO. Client version is aria2/VERSION.
	* src/DefaultBtInteractive.cc
	* src/OptionHandlerFactory.cc
	* src/bittorrent_helper.cc
	* src/bittorrent_helper.h
	* src/main.cc
	* src/usage_text.h
	* test/BittorrentHelperTest.cc

2009-10-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed memory leak.
	* src/DownloadCommand.cc

2009-10-04  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed server, port, user and passwd key from options before
	XMLRPC::Client.call since they are not options of aria2.
	* doc/xmlrpc/aria2mon
	* doc/xmlrpc/aria2rpc

2009-10-04  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Included version number in user-agent string.
	* src/OptionHandlerFactory.cc

2009-10-04  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that the option values changed by XML-RPC
	method(changeOption and changeGlobalOption) are overwritten to the
	previous value by the next these request which doesn't contain
	that option value. Supporse max-download-limit is initially 0. You
	changed this value to 100K by changeOption. Then you issue
	changeOption request to change max-upload-limit to 50K. This